feat: add Trivy scanning step to Docker build action
Introduced a Trivy scanning step to detect vulnerabilities in Docker images. Integrated JUnit reporting for vulnerability results, enabling detailed analysis and annotations in CI workflows. Ensures critical and high vulnerabilities are surfaced effectively.

--- a/actions/trivy/action.yaml
+++ b/actions/trivy/action.yaml
@@ -1,5 +1,5 @@
-name: Docker Build & Push
-description: Docker Build & Push
+name: Scan Container with Trivy
+description: More https://github.com/aquasecurity/trivy-action
 inputs:
   image:
     description: image
